err/semanticanalysis.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SemanticAnalysis'...
Listing './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis'...
Listing './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/Algorithms'...
Listing './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/CNArticleAnalysis'...
Compiling './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/CNArticleAnalysis/article_analysis.py'...
***   File "./lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/CNArticleAnalysis/article_analysis.py", line 99
    print "The semantic result:", result
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/CNParticipation'...
Compiling './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/CNParticipation/jieba_participator.py'...
***   File "./lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/CNParticipation/jieba_participator.py", line 14
    print item
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/DUTLib'...
Compiling './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/DUTLib/dut_extractor.py'...
***   File "./lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/DUTLib/dut_extractor.py", line 113
    print item["word"], item
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/DUTLib/dut_extractor_factory.py'...
***   File "./lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/DUTLib/dut_extractor_factory.py", line 21
    print dut_ext
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/common'...
Listing './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/common_lib'...
Listing './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/hownet_lib'...
Listing './lib/python3.5/site-packages/SemanticAnalysis/CNSentimentAnalysis/ntusd_lib'...
Listing './lib/python3.5/site-packages/SemanticAnalysis-0.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
